--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "antd": "^5.19.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "swiper": "^11.1.5",
+    "tailwindcss": "^3.4.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
